--- a/src/index.css
+++ b/src/index.css
@@ -37,8 +37,29 @@ section {
   @apply mx-0 my-10 pt-10;
 }
 
+@keyframes expandBorder {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
 h1 {
-  @apply w-3/5 font-normal text-[35px] tracking-[1px] mx-10 my-0 px-0 py-2.5 border-b-2 border-b-[white] border-solid;
+  @apply w-3/5 font-normal text-[35px] tracking-[1px] mx-10 my-0 px-0 py-2.5 /* border-b-2 border-b-[white] border-solid */;
+  position: relative;
+  overflow: hidden;
+}
+h1::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px; /* Même hauteur que la bordure définie */
+  background-color: white;
+  width: 0; /* Largeur initiale de la bordure */
+  animation: expandBorder 1.5s ease-in-out forwards; /* Animation au chargement */
 }
 
 h2 {
@@ -46,12 +67,13 @@ h2 {
 }
 
 header li {
-  @apply text-white text-[21px] font-light my-2 border-b border-white py-2 tracking-wide;
+  @apply text-white text-[23px] font-light my-2 border-b border-white py-2 tracking-[0.05rem];
 }
 
 .card {
-  @apply pb-8;
+  @apply pb-16;
 }
+
 .content {
   @apply px-0 py-[50px];
 }
